# clap-completion-zoink

./: Cargo.toml  _clap_completion_zoink
src/: main.rs
