[package]
name = "clap-completion-zoink"
version = "0.2.0"
edition = "2021"
author = "Bernhard Schuster <bernhard@ahoi.io>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
clap_complete = "3"
